# srtmerge

./: .gitignore  Makefile.am  NEWS  README  README.md  configure.ac
data/: Makefile.am  srtmerge.desktop
data/icons/: Makefile.am
data/images/: Makefile.am
debian/: changelog  control  copyright
man/: Makefile.am  srtmerge.1
packaging/: packaging.sh
src/: Makefile.am  config.vapi  custom-file-chooser.vala  debug.vala  file-source.vala  font.vala  main.vala  processing.vala  source-entry.vala  srtmerge-window.vala  srtmerge.vala  tests.vala  text.vala  title.vala
